update: improved Login UI/UX and removed bg image

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+/* =========================
+   AUTH LOADER ANIMATION
+========================= */
+
+@theme {
+  --animate-loadingBar: loadingBar 1.5s ease-in-out infinite;
+}
+
+@keyframes loadingBar {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(200%);
+  }
+}
